<resources>
    <string name="app_name">Gothic Soundboard</string>
    <string name="explore">Explore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="actor">Actor</string>
    <string name="name">Name</string>
    <string name="character">Character</string>
    <string name="dialog_text">Dialog text</string>
    <string name="actor_name_or_surname">Actor name or surname</string>
    <string name="aaron">Aaron</string>
    <string name="hey_you">Hey you!</string>
    <string name="is_favorite">is favorite</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="directory">Directory</string>
    <string name="choose_where_is_directory">Chose directory where your resources files are located</string>
    <string name="resources_directory">Resources directory</string>
    <string name="favorites">Favorites</string>
    <string name="filter">Filter</string>
    <string name="small_talk">Smalltalk</string>
</resources>
